--- a/src/sections/header.astro
+++ b/src/sections/header.astro
@@ -4,7 +4,7 @@ import GradientText from "@/animations/gradientText/gradientText";
 
 <header
   id="navbar"
-  class="fixed w-full top-0 left-0 z-50 transition-all duration-300 py-4"
+  class="fixed bg-background w-[calc(100%-16px)] md:w-[calc(100%-17px)] top-0 left-0 z-10 transition-all duration-300 py-4"
 >
   <div class="container mx-auto px-4 md:px-8">
     <div class="flex justify-between items-center">
@@ -14,7 +14,7 @@ import GradientText from "@/animations/gradientText/gradientText";
         class="text-2xl font-bold text-gradient flex items-center gap-2"
       >
         <GradientText
-          colors={["#42d9c8", "#223a4e", "#42d9c8", "#223a4e"]}
+          colors={["#42d9c8", "#338b80", "#42d9c8", "#338b80"]}
           animationSpeed={10}
           showBorder={false}
           className=""
@@ -59,7 +59,7 @@ import GradientText from "@/animations/gradientText/gradientText";
       <!-- Mobile Menu Button -->
       <button id="menu-btn" class="md:hidden text-2xl">
         <GradientText
-          colors={["#42d9c8", "#037171", "#42d9c8", "#037171"]}
+          colors={["#42d9c8", "#338b80", "#42d9c8", "#338b80"]}
           animationSpeed={4}
           showBorder={false}
           className=""
