--- a/src/sections/footer.astro
+++ b/src/sections/footer.astro
@@ -1,18 +1,27 @@
 ---
-
+import GradientText from "@/animations/gradientText/gradientText";
 ---
 
-<footer class="bg-second/10 border-t border-first/30 pt-16 pb-8">
+<footer class="bg-background/10 border-t border-primary pt-16 pb-8">
   <div class="container mx-auto px-4 md:px-8">
     <!-- Top Footer -->
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-12">
       <!-- Brand Column -->
-      <div class="space-y-4">
+      <div class="space-y-4 flex flex-col items-start">
         <a
-          href="#"
+          href="#hero"
           class="text-2xl font-bold text-gradient flex items-center gap-2"
         >
-          <i class="ri-code-s-slash-line"></i>Mario Dev
+          <GradientText
+            colors={["#42d9c8", "#338b80", "#42d9c8", "#338b80"]}
+            animationSpeed={10}
+            showBorder={false}
+            className=""
+            client:load
+          >
+            <i class="ri-code-s-slash-line"></i>
+            mario.dev
+          </GradientText>
         </a>
         <p class="text-gray-400 max-w-xs">
           Creating digital experiences that blend creativity with technical
@@ -47,8 +56,17 @@
       </div>
 
       <!-- Quick Links -->
-      <div class="space-y-4">
-        <h3 class="text-lg font-semibold text-text">Quick Links</h3>
+      <div class="space-y-4 flex flex-col items-start w-1/3">
+        <GradientText
+          colors={["#42d9c8", "#338b80", "#42d9c8", "#338b80"]}
+          animationSpeed={10}
+          showBorder={false}
+          className="font-bold text-lg mb-4"
+          client:load
+        >
+          Quick Links
+        </GradientText>
+
         <ul class="space-y-2">
           <li>
             <a
@@ -94,8 +112,17 @@
       </div>
 
       <!-- Services -->
-      <div class="space-y-4">
-        <h3 class="text-lg font-semibold text-text">Services</h3>
+      <div class="space-y-4 flex flex-col items-start">
+        <GradientText
+          colors={["#42d9c8", "#338b80", "#42d9c8", "#338b80"]}
+          animationSpeed={10}
+          showBorder={false}
+          className="font-bold text-lg mb-4"
+          client:load
+        >
+          Services
+        </GradientText>
+
         <ul class="space-y-2">
           <li>
             <a
@@ -142,10 +169,18 @@
 
       <!-- Contact Info -->
       <div class="space-y-4">
-        <h3 class="text-lg font-semibold text-text">Get In Touch</h3>
+        <GradientText
+          colors={["#42d9c8", "#338b80", "#42d9c8", "#338b80"]}
+          animationSpeed={10}
+          showBorder={false}
+          className="font-bold text-lg mb-4"
+          client:load
+        >
+          Get In Touch
+        </GradientText>
         <ul class="space-y-3">
           <li class="text-gray-400 flex items-center gap-3">
-            <i class="ri-mail-line text-indigo-400"></i>
+            <i class="ri-mail-line text-primary"></i>
             <a
               href="mailto:hello@devportfolio.com"
               class="hover:text-text transition-colors duration-300"
@@ -154,7 +189,7 @@
             </a>
           </li>
           <li class="text-gray-400 flex items-center gap-3">
-            <i class="ri-phone-line text-indigo-400"></i>
+            <i class="ri-phone-line text-primary"></i>
             <a
               href="tel:+1234567890"
               class="hover:text-text transition-colors duration-300"
@@ -163,7 +198,7 @@
             </a>
           </li>
           <li class="text-gray-400 flex items-start gap-3">
-            <i class="ri-map-pin-line text-indigo-400 mt-1"></i>
+            <i class="ri-map-pin-line text-primary mt-1"></i>
             <span>Pitalito, Huila<br />Colombia</span>
           </li>
         </ul>
@@ -173,17 +208,17 @@
           <label for="newsletter" class="text-sm text-gray-300"
             >Stay Updated</label
           >
-          <div class="flex">
+          <div class="flex mt-2">
             <input
               type="email"
               id="newsletter"
               placeholder="Enter your email"
-              class="bg-slate-800 border border-indigo-500/30 rounded-l-md py-2 px-4 focus:outline-none focus:border-indigo-500 text-gray-300 w-full text-sm"
+              class="bg-background/20 border border-primary rounded-l-full py-2 px-4 focus:outline-none focus:border-white text-gray-300 w-full text-sm"
             />
             <button
-              class="bg-indigo-600 hover:bg-indigo-700 text-text py-2 px-4 rounded-r-md transition-colors duration-300"
+              class="bg-primary hover:bg-tertiary text-background hover:text-text py-2 px-4 rounded-r-full transition-colors duration-300"
             >
-              <i class="ri-send-plane-fill"></i>
+              <i class="ri-send-plane-fill text-xl text-center"></i>
             </button>
           </div>
         </div>
@@ -221,9 +256,9 @@
 
       <a
         href="#hero"
-        class="bg-indigo-600/20 hover:bg-indigo-600/40 text-text p-2 rounded-full transition-all duration-300"
+        class="bg-primary hover:bg-tertiary hover:text-text text-background px-3 py-2 rounded-full transition-all duration-300"
       >
-        <i class="ri-arrow-up-line"></i>
+        <i class="ri-arrow-up-line text-xl font-semibold"></i>
       </a>
     </div>
   </div>
