--- a/src/sections/hero.astro
+++ b/src/sections/hero.astro
@@ -131,11 +131,11 @@ import CardImage from "@/components/cardImage/cardImage.astro";
 
   <!-- Background Elements -->
   <div
-    class="absolute -z-10 top-1/2 left-1/4 w-64 h-64 bg-[#223a4e]/40 rounded-full blur-3xl"
+    class="absolute -z-10 top-1/2 left-1/4 w-64 h-64 bg-secondary/40 rounded-full blur-3xl"
   >
   </div>
   <div
-    class="absolute -z-10 bottom-1/4 right-1/3 w-96 h-96 bg-[#223a4e]/50 rounded-full blur-3xl"
+    class="absolute -z-10 bottom-1/4 right-1/3 w-96 h-96 bg-secondary/50 rounded-full blur-3xl"
   >
   </div>
 </section>
