feat: enhace rotating text component and update styles

--- a/src/components/socialLinks/socialLinks.astro
+++ b/src/components/socialLinks/socialLinks.astro
@@ -1,33 +1,25 @@
----
-
----
-
-<div class="flex gap-6 pt-4 animate-fadeUp" style="--delay: 1.2s">
+<div class="flex gap-4 pt-2">
   <a
     href="#"
-    class="flex items-center justify-center w-10 h-10 text-[1.25rem] text-primary/60 rounded-full bg-fourth/10 transition-all duration-300 ease-in-out hover:text-white hover:bg-fourth/30 hover:-translate-y-1.5 hover:shadow-md shadow-primary"
-    aria-label="GitHub"
+    class="text-xl text-gray-400 hover:text-text transition-colors duration-500 hover:scale-110"
   >
     <i class="ri-github-fill"></i>
   </a>
   <a
     href="#"
-    class="flex items-center justify-center w-10 h-10 text-[1.25rem] text-primary/60 rounded-full bg-fourth/10 transition-all duration-300 ease-in-out hover:text-white hover:bg-fourth/30 hover:-translate-y-1.5 hover:shadow-md shadow-primary"
-    aria-label="LinkedIn"
+    class="text-xl text-gray-400 hover:text-text transition-colors duration-500 hover:scale-110"
   >
     <i class="ri-linkedin-fill"></i>
   </a>
   <a
     href="#"
-    class="flex items-center justify-center w-10 h-10 text-[1.25rem] text-primary/60 rounded-full bg-fourth/10 transition-all duration-300 ease-in-out hover:text-white hover:bg-fourth/30 hover:-translate-y-1.5 hover:shadow-md shadow-primary"
-    aria-label="Twitter"
+    class="text-xl text-gray-400 hover:text-text transition-colors duration-500 hover:scale-110"
   >
     <i class="ri-twitter-x-fill"></i>
   </a>
   <a
     href="#"
-    class="flex items-center justify-center w-10 h-10 text-[1.25rem] text-primary/60 rounded-full bg-fourth/10 transition-all duration-300 ease-in-out hover:text-white hover:bg-fourth/30 hover:-translate-y-1.5 hover:shadow-md shadow-primary"
-    aria-label="Dribbble"
+    class="text-xl text-gray-400 hover:text-text transition-colors duration-500 hover:scale-110"
   >
     <i class="ri-dribbble-line"></i>
   </a>
