--- a/src/sections/hero.astro
+++ b/src/sections/hero.astro
@@ -1,15 +1,11 @@
 ---
 import AnimatedSplitText from "@/animations/splitText/gsap/animatedSplitText";
-import RotatingText from "@/animations/rotatingText/rotatingText";
 import SocialLinks from "@/components/socialLinks/socialLinks.astro";
 import CardImage from "@/components/cardImage/cardImage.astro";
+import AnimateRotatingText from "@/animations/rotatingText/animateRotatingText";
 ---
 
-<section
-  id="hero"
-  class="min-h-screen pt-24 pb-16 flex items-center relative"
->
-
+<section id="hero" class="min-h-screen pt-24 pb-16 flex items-center relative">
   <div class="container mx-auto px-4 md:px-8">
     <div class="grid md:grid-cols-2 gap-12 items-center">
       <!-- Hero Content -->
@@ -34,108 +30,69 @@ import CardImage from "@/components/cardImage/cardImage.astro";
         </div>
 
         <div class="flex flex-col gap-6 pt-2">
-          <!-- <SplitGradientText
-            text="Hi, I'm"
-            gradientText="Mario Perdomo"
-            className="animate-gradient"
-            textClass="text-white"
-            animationSpeed={4}
-            client:load
-          /> -->
 
-          <div class="flex animate-fadeUp" style="--delay: 0.8s">
+            <div class="flex animate-fadeUp" style="--delay: 0.8s">
             <AnimatedSplitText
               text="Hi, I'm Mario Perdomo"
-              className="text-5xl md:text-5xl lg:text-6xl font-extrabold"
+              className="text-5xl md:text-5xl lg:text-6xl font-extrabold text-center md:text-start"
+              highlightText="Mario Perdomo"
               client:load
               x={0}
               y={20}
               duration={1}
               stagger={0.1}
             />
-          </div>
+            </div>
+          
+          <AnimateRotatingText client:load />
 
-          <div
-            class="flex flex-wrap items-center gap-2 animate-fadeUp"
-            style="--delay: 0.8s"
-          >
-            <AnimatedSplitText
-              text="Creating"
-              className="text-2xl md:text-3xl text-text font-bold"
-              client:load
-              duration={1}
-              stagger={0.2}
-            />
-
-            <div class="relative h-[38px] md:h-[44px] flex items-center animate-fadeUp" style="--delay: 0.8s">
-              <RotatingText
-                texts={[
-                  "Websites",
-                  "Interfaces",
-                  "Dashboards",
-                  "Software",
-                  "User Experiences",
-                ]}
-                mainClassName="text-2xl md:text-3xl bg-primary px-2 rounded-lg text-background overflow-hidden font-bold"
-                staggerFrom={"last"}
-                initial={{ y: "100%", opacity: 0 }}
-                animate={{ y: 0, opacity: 1 }}
-                exit={{ y: "-120%", opacity: 0 }}
-                staggerDuration={0.025}
-                splitLevelClassName="overflow-hidden"
-                transition={{ type: "spring", damping: 30, stiffness: 400 }}
-                rotationInterval={3000}
+            <div class="animate-fadeUp" style="--delay: 0.8s">
+              <AnimatedSplitText
+                text="I craft digital experiences that blend creativity with technical excellence. Specializing in creating modern, responsive, and user-friendly web applications."
+                className="text-text/80 text-lg max-w-lg"
                 client:load
+                x={0}
+                y={20}
+                duration={1}
+                stagger={0.02}
               />
             </div>
           </div>
 
-          <div class="animate-fadeUp" style="--delay: 0.8s">
-            <AnimatedSplitText
-              text="I craft digital experiences that blend creativity with technical excellence. Specializing in creating modern, responsive, and user-friendly web applications."
-              className="text-text/80 text-lg max-w-lg"
-              client:load
-              x={0}
-              y={20}
-              duration={1}
-              stagger={0.02}
-            />
-          </div>
-        </div>
-
-        <div
-          class="flex flex-wrap gap-4 pt-4 animate-fadeUp"
-          style="--delay: 1s"
-        >
+          <div
+            class="flex flex-wrap gap-4 pt-4 animate-fadeUp"
+            style="--delay: 1s"
+          >
             <a
-            href="#projects"
-            class="bg-gradient-to-r from-primary/10 to-primary/30 border border-primary text-text py-3 px-8 rounded-full transition-all duration-300 flex items-center gap-2 font-medium"
-          >
-            <i class="ri-eye-line"></i> View My Work
-          </a>
+              href="#projects"
+              class="bg-gradient-to-r from-primary/10 to-primary/30 border border-primary text-text py-3 px-8 rounded-full transition-all duration-300 flex items-center gap-2 font-medium"
+            >
+              <i class="ri-eye-line"></i> View My Work
+            </a>
 
-          <a
-            href="#contact"
-            class="border border-primary text-text py-3 px-8 rounded-full transition-all duration-300 flex items-center gap-2 font-medium backdrop-blur-sm "
-          >
-            <i class="ri-chat-1-line"></i> Contact Me
-          </a>
+            <a
+              href="#contact"
+              class="border border-primary text-text py-3 px-8 rounded-full transition-all duration-300 flex items-center gap-2 font-medium backdrop-blur-sm"
+            >
+              <i class="ri-chat-1-line"></i> Contact Me
+            </a>
+          </div>
+          <SocialLinks />
         </div>
-        <SocialLinks />
+
+        <!-- Hero Image -->
+        <CardImage />
       </div>
-
-      <!-- Hero Image -->
-      <CardImage />
     </div>
-  </div>
 
-  <!-- Background Elements -->
-  <div
-    class="absolute -z-10 top-1/2 left-1/4 w-64 h-64 bg-secondary/40 rounded-full blur-3xl"
-  >
-  </div>
-  <div
-    class="absolute -z-10 bottom-1/4 right-1/3 w-96 h-96 bg-secondary/50 rounded-full blur-3xl"
-  >
+    <!-- Background Elements -->
+    <div
+      class="absolute -z-10 top-1/2 left-1/4 w-64 h-64 bg-secondary/40 rounded-full blur-3xl"
+    >
+    </div>
+    <div
+      class="absolute -z-10 bottom-1/4 right-1/3 w-96 h-96 bg-secondary/50 rounded-full blur-3xl"
+    >
+    </div>
   </div>
 </section>
